--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
         </li>
         {% endfor %}
         <li class="menu-item">
-          <div data-netlify-identity-menu></div>
+          <div data-netlify-identity-button>Login</div>
         </li>
       </ul><!-- .menu -->
       <button id="menu-close" class="menu-toggle"><span class="screen-reader-text">Close Menu</span><span
