--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,6 +40,9 @@ $palette: (
   bg:        #fbfbfb
 );
 
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+
+
 // Imports
 @import "functions";
 @import "icons";
