--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,19 @@
 <!DOCTYPE html>
+<!--        _                        
+       \`*-.                    
+        )  _`-.   meow!           
+       .  : `. .  /             
+       : _   '  \               
+       ; *` _.   `*-._          
+       `-.-'          `-.       
+         ;       `       `.     
+         :.       .        \    
+         . \  .   :   .-'   .   
+         '  `+.;  ;  '      :   
+         :  '  |    ;       ;-. 
+         ; '   : :`-:     _.`* ;
+      .*' /  .*' ; .*`- +'  `*' 
+      `*-*   `*-*  `*-*' -->
 <html lang="{{ site.lang | default: 'en-US' }}">
 <head>
   <meta charset="utf-8">
