--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,7 @@
 <!DOCTYPE html>
-<!--        _                        
-       \`*-.                    
-        )  _`-.   meow!           
-       .  : `. .  /             
-       : _   '  \               
-       ; *` _.   `*-._          
-       `-.-'          `-.       
-         ;       `       `.     
-         :.       .        \    
-         . \  .   :   .-'   .   
-         '  `+.;  ;  '      :   
-         :  '  |    ;       ;-. 
-         ; '   : :`-:     _.`* ;
-      .*' /  .*' ; .*`- +'  `*' 
-      `*-*   `*-*  `*-*' -->
+<!--
+{{ site.asciicomment }}
+-->
 <html lang="{{ site.lang | default: 'en-US' }}">
 <head>
   <meta charset="utf-8">
